--- a/app/src/main/res/layout/activity_lista.xml
+++ b/app/src/main/res/layout/activity_lista.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
         <Button
             android:id="@+id/btnNovo"
-            android:text="Novo"
+            android:text="@string/novo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
